--- a/index.html
+++ b/index.html
@@ -292,13 +292,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Anandxz/farmcrop'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://farmcropdnc.netlify.app/'"
               >
                 Live Demo
               </button>
