--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Empowering Farmers with Smart Technology</h2>
+            <h2 class="experience-sub-title project-title">Farmers with Smart Technology</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
