--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/Anand Prakash Dubey RESUME.pdf')"
           >
             Download CV
           </button>
