--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
+                  <h3>HTML CSS</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -143,7 +143,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS  </h3>
+                  <h3>Pandas</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -165,7 +165,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Android Studio</h3>
+                  <h3>Numpy</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -187,7 +187,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>English</h3>
+                  <h3>Seaborn</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -214,7 +214,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>AI USE</h3>
+                  <h3>Low Code</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
